# SFKJ

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindRelic.cmake
src/: CMakeLists.txt  demo.cpp  puridemo.cpp
src/OEP/: OEP.cpp  OEP.h
src/OEP/yilei/: OEP.cpp  secyantest.cpp
src/PRNG/: PRNG.cpp  PRNG.h
src/PermNet/: PermutationNetwork.cpp  PermutationNetwork.h  WaksmanPermutation.cpp  WaksmanPermutation.h
src/Purify/: PurificationCircuit.cpp  PurificationCircuit.h  cdcircuitonepc  cdcircuitonepc.cpp
src/aggregation/: aggregation.cpp  aggregation.h
src/common/: psi_analytics.cpp  psi_analytics.h  psi_analytics_context.h
src/demo/: demo.cpp  lineardemo.cpp  multidemo.cpp  psi.cpp  psi_analytics_example.cpp  testpermnet.cpp  tpchq5demo.cpp
src/join/: join.cpp  join.h  twoserverjoin.cpp  twoserverjoin.h
src/ots/: ots.cpp
src/secureml/: CMakeLists.txt  common.h  dpoulad.cpp  draw.py  plainlinear.cpp
src/secureml/data/: data0.txt  data1.txt  dpnoise0.txt  dpnoise1.txt  xa.txt
src/sort/: bitonicsort  bitonicsort.cpp  sort.cpp  sort.h
src/utils/: multicom.cpp  multicom.h
